# SpendGuard-Backend

./: .gitignore  README.md
app/: Cargo.toml
app/src/: app_state.rs  main.rs
app/src/api/: agents.rs  mod.rs  proxy.rs  telemetry_ws.rs
app/src/domain/: agent.rs  budget.rs  mod.rs  request_log.rs  workflow.rs
app/src/infra/: btl_client.rs  db.rs  mod.rs
app/src/middleware/: auth.rs  mod.rs
